# AnsimOn-Backend-AI

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.sse  Dockerfile.worker  LICENSE  README.ko.md  README.md  pyproject.toml
.github/workflows/: ai-worker-ecs-deploy.yml  sse-ecs-deploy.yml  sse-lambda-deploy.yml  sse-lambda-layer-deploy.yml
ai/src/ansimon_ai/caching/: __init__.py  caching.py  db.py  models.py  s3.py
ai/src/ansimon_ai/eval/: runner_v0.py  types_v0.py  validator_adapter_v0.py
ai/src/ansimon_ai/llm/: __init__.py  base.py  mock.py  openai_client.py
ai/src/ansimon_ai/ocr/: from_ocr.py  types.py
ai/src/ansimon_ai/pdf/: detect_pdf_type.py  document_structuring.py  extract_image_pdf.py  extract_text_auto.py  extract_text_docx.py  extract_text_pdf.py
ai/src/ansimon_ai/prompting/: build_messages.py  system_prompt_v0.txt
ai/src/ansimon_ai/requirements/: __init__.py  event_io_v0.py  state_v0.py
ai/src/ansimon_ai/structuring/: __init__.py  call.py  from_stt.py  from_text.py  run.py  tag_patterns.py  timestamp_utils.py  types.py
ai/src/ansimon_ai/structuring/anchor/: apply.py  matcher.py  store.py
ai/src/ansimon_ai/structuring/cache/: hash.py  manager.py  storage.py
ai/src/ansimon_ai/structuring/tags/: __init__.py  generate.py  types.py
ai/src/ansimon_ai/stt/: __init__.py  base.py  mock.py  types.py  whisper_stt.py
ai/src/ansimon_ai/timeline/: __init__.py  grouping.py  prototype.py  types.py
ai/src/ansimon_ai/trial/signals_v0/: __init__.py  cache_manager.py  generate.py  prompt_v0.txt  storage.py  types.py  validate.py
ai/src/ansimon_ai/validator/: result.py  runner.py  schema.py  tag_validator_v0.py
ai/src/ansimon_ai/validator/rules/: anchor_consistency.py  required_keys.py  schema_exists.py
ai/src/ansimon_ai/validator/rules/confidence/: confidence_value.py
ai/src/ansimon_ai/validator/rules/schema/: confidence_and_evidence.py  required_keys.py
ai/src/ansimon_ai/video/: __init__.py  extract_frames.py
ai/src/schemas/: complaint_timeline.py  timeline_inputs.py
api/: README.md
api/app/: main.py
api/app/base/: __init__.py  base_error.py  base_repository.py  base_request.py  base_response.py
api/app/core/: auth.py  aws.py  database.py  settings.py
api/app/dev/: endpoints.py  utils.py
scripts/: clone_ai.sh  timeline_sse_stream.py
shared/core/: aws.py  database.py  settings.py
shared/models/: __init__.py  complaint_model.py  document_model.py  evidences_model.py  task_model.py  timeline_model.py  user_model.py
sse/: main.py  tasks.py
worker/: heic_convert.py  json_sanitize.py  main.py  sqs_utils.py  tag_map.py
worker/document/: ai_generated_stub.py  ai_input_builder.py  execute_task.py  save_output.py
worker/models/: __init__.py  base.py  complaint_model.py  evidences_model.py  task_model.py  timeline_model.py  user_model.py
worker/timeline/: ai_input_builder.py  execute_task.py  save_output.py  schemas.py
