[tool.poetry]
package-mode = false

[project]
name = "ansimon-backend-ai"
version = "0.1.0"
description = "init"
authors = [
    {name = "Soru",email = "144131324+matchlessNostril@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    # shared 의존성
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "boto3 (>=1.42.70,<2.0.0)",
]

[project.optional-dependencies]
# SSE API (FastAPI). poetry install -E sse
sse = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
]
# AI worker 전용 (/ai 포함). poetry install -E worker
worker = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "python-docx>=1.1.0",
    "pytesseract==0.3.13",
    "Pillow==12.1.1",
    "pillow-heif>=0.21.0",
    "pdfplumber==0.11.9",
    "pdf2image==1.17.0",
    "openai-whisper==20250625",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.15.6,<0.16.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"shared/models/__init__.py" = ["I"]
